--- a/FL12_HW3/homework/scss/_main.scss
+++ b/FL12_HW3/homework/scss/_main.scss
@@ -43,7 +43,7 @@ a {
   }
 
   &_heading {
-    font: 1000 49px/1 $fontMain;
+    font: bold 49px/1 $fontMain;
     color: $colorContent;
     margin: 49px 0 25px 0;
     letter-spacing: 0.9px;
