--- a/FL12_HW3/homework/css/style1.css
+++ b/FL12_HW3/homework/css/style1.css
@@ -27,7 +27,7 @@ a {
     .header-wrap a {
       margin-left: 103px; }
   .header_heading {
-    font: 1000 49px/1 "Source Sans Pro", sans-serif;
+    font: bold 49px/1 "Source Sans Pro", sans-serif;
     color: #2C2F3C;
     margin: 49px 0 25px 0;
     letter-spacing: 0.9px;
